[gd_scene load_steps=15 format=3 uid="uid://bpxoa0odfnb52"]

[ext_resource type="Script" uid="uid://bir0njdj0yhjh" path="res://gameplay/gameplay.gd" id="1_gvicd"]
[ext_resource type="PackedScene" uid="uid://b01nsjmmrjijr" path="res://player/player.tscn" id="1_n4psk"]
[ext_resource type="PackedScene" uid="uid://bcb178bbl6qlo" path="res://camera/camera_follow.tscn" id="2_ej4tk"]
[ext_resource type="PackedScene" uid="uid://2mnh43yrjpta" path="res://level/level.tscn" id="3_oe8ih"]
[ext_resource type="PackedScene" uid="uid://q8cktic6p6vb" path="res://stats/player_stat.tscn" id="4_xuee5"]
[ext_resource type="Script" uid="uid://cbxdfvni3wlfj" path="res://gameplay/win_area.gd" id="5_7pdct"]
[ext_resource type="Script" uid="uid://di1nje34f51ay" path="res://gameplay/cutscene_area.gd" id="6_r5as3"]
[ext_resource type="AudioStream" uid="uid://cootxp14b85yr" path="res://audio/music/FrogExplode.mp3" id="7_uk44f"]
[ext_resource type="Script" uid="uid://cfqbvx4wgcmff" path="res://gameplay/cutscene.gd" id="7_yvprt"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_n4psk"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_ej4tk"]
sky_material = SubResource("ProceduralSkyMaterial_n4psk")

[sub_resource type="Environment" id="Environment_oe8ih"]
background_mode = 2
sky = SubResource("Sky_ej4tk")
tonemap_mode = 2
fog_enabled = true
fog_mode = 1
fog_density = 0.4
fog_height = -8.0
fog_height_density = 0.08
fog_depth_curve = 3.0

[sub_resource type="BoxShape3D" id="BoxShape3D_ktb3l"]
size = Vector3(5.0611725, 1.3304443, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_gvicd"]
size = Vector3(38.158997, 82.13196, 23.140625)

[node name="Gameplay" type="Node3D"]
script = ExtResource("1_gvicd")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_oe8ih")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.6140648, 0.6835154, -0.3946278, 2.7805946e-08, 0.49999994, 0.86602545, 0.7892556, -0.53179574, 0.30703235, 0, 0, 0)
light_color = Color(0.43275476, 0.5733627, 0.3623269, 1)
light_energy = 0.5
shadow_enabled = true

[node name="Player" parent="." node_paths=PackedStringArray("gameplay") instance=ExtResource("1_n4psk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -79.97329, -12.703863, 0)
axis_lock_linear_z = true
gameplay = NodePath("..")

[node name="CameraFollow" parent="." node_paths=PackedStringArray("following") instance=ExtResource("2_ej4tk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -59, 0, 41.584194)
following = NodePath("../Player")

[node name="Level" parent="." instance=ExtResource("3_oe8ih")]
transform = Transform3D(50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="Level"]
transform = Transform3D(0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, -1.5994657, -0.23542847, 0)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Level/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.97714585, -0.21256994, 0, 0.21256994, 0.97714585, -1.0602722, -1.7270584, -0.031903654)
shape = SubResource("BoxShape3D_ktb3l")

[node name="WinArea" type="Area3D" parent="." node_paths=PackedStringArray("gameplay")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 746.55566, 70.21772, 0)
script = ExtResource("5_7pdct")
gameplay = NodePath("..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="WinArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.605469, 21.925354, 0)
shape = SubResource("BoxShape3D_gvicd")

[node name="CutsceneArea" type="Area3D" parent="." node_paths=PackedStringArray("cutscene")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23.878296, 12.036743, 0)
script = ExtResource("6_r5as3")
text = "I need to poop..."
cutscene = NodePath("../CanvasLayer/MiddleCutscene")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CutsceneArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.605469, 21.925354, 0)
shape = SubResource("BoxShape3D_gvicd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerStat" parent="CanvasLayer" node_paths=PackedStringArray("player") instance=ExtResource("4_xuee5")]
visible = false
player = NodePath("../../Player")

[node name="EndGame" type="Control" parent="CanvasLayer"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/EndGame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -364.0
offset_top = -224.0
offset_right = 364.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/EndGame/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/EndGame/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Thanks for playing!"

[node name="MiddleCutscene" type="Control" parent="CanvasLayer"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_yvprt")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/MiddleCutscene"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -446.0
offset_top = -152.0
offset_right = 446.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MiddleCutscene/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/MiddleCutscene/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Some dialogue"

[node name="Timer2" type="Timer" parent="CanvasLayer/MiddleCutscene"]
one_shot = true

[node name="Died" type="Control" parent="CanvasLayer"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Died"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -364.0
offset_top = -224.0
offset_right = 364.0
offset_bottom = 224.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Died/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/Died/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Exploded!"

[node name="Button" type="Button" parent="CanvasLayer/Died/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Cheat Point" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 658.1256, 73.33242, 0)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="FrogExplode" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_uk44f")

[connection signal="body_entered" from="WinArea" to="WinArea" method="_on_body_entered"]
[connection signal="body_entered" from="CutsceneArea" to="CutsceneArea" method="_on_body_entered"]
[connection signal="pressed" from="CanvasLayer/Died/PanelContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
